--- a/src/index.html
+++ b/src/index.html
@@ -278,7 +278,7 @@
             target="_blank"
             class="cta-btn cta-btn--resume"
             href="mailto:wazeefzainol@gmail.com"
-            >Call to Action</a
+            >Email me</a
           >
         </div>
       </div>
